--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ let now = new Date().getTime(),
 distance = now - countDown;
 
   
-document.getElementById('months').innerText = monthDiff(countDown,now),
+//document.getElementById('months').innerText = monthDiff(countDown,now),
 document.getElementById('week').innerText = Math.floor(distance / (day) / 7) +'.'+ Math.floor((distance / (day) % 7)) ,
 document.getElementById('days').innerText = Math.floor(distance / (day) -30 * (Math.floor(distance / (day) / 30))),        
 document.getElementById('days2').innerText = Math.floor(distance / (day)),
