--- a/index.html
+++ b/index.html
@@ -58,7 +58,15 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
     return months <= 0 ? 0 : months;
 }  
     
-</script>
+
+  var getDaysInMonth = function(month,year) {
+  // Here January is 1 based
+  //Day 0 is the last day in the previous month
+ return new Date(year, month, 0).getDate();
+// Here January is 0 based
+// return new Date(year, month+1, 0).getDate();
+};
+  </script>
 
 <style>
 
