--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
 // Here January is 0 based
 // return new Date(year, month+1, 0).getDate();
 };
+  
+    console.log(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
+
   </script>
 
 <style>
