--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
     return months <= 0 ? 0 : months;
 }  
     
-  console.log(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
+  alert(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
 
   var getDaysInMonth = function(month,year) {
   // Here January is 1 based
