--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
     return months <= 0 ? 0 : months;
 }  
     
-  alert(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
-
+  //alert(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
+alert(4,2020);
   var getDaysInMonth = function(month,year) {
   // Here January is 1 based
   //Day 0 is the last day in the previous month
@@ -68,7 +68,7 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
 // return new Date(year, month+1, 0).getDate();
 };
   
-    console.log(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
+    //console.log(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
 
   </script>
 
