--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
 }  
     
   //alert(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
-alert(4,2020);
+
+  
   var getDaysInMonth = function(month,year) {
   // Here January is 1 based
   //Day 0 is the last day in the previous month
@@ -67,7 +68,7 @@ alert(4,2020);
 // Here January is 0 based
 // return new Date(year, month+1, 0).getDate();
 };
-  
+  alert(getDaysInMonth(4,2020));
     //console.log(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
 
   </script>
