--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
 // Here January is 0 based
 // return new Date(year, month+1, 0).getDate();
 };
-  alert(getDaysInMonth(4,2020));
+  alert(getDaysInMonth(nowDate.getMonth(),2020));
     //console.log(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
 
   </script>
