--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
 // Here January is 0 based
 // return new Date(year, month+1, 0).getDate();
 };
+  
+    console.log(nowDate.getMonth());
+console.log(nowDate.getFullYear());
   console.log(getDaysInMonth(nowDate.getMonth(),nowDate.getFullYear()));
     //console.log(getDaysInMonth(nowDate.getMonth(), nowDate.getFullYear()));
 
