--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ document.getElementById('seconds').innerText = Math.floor((distance % (minute)) 
   var getDaysInMonth = function(month,year) {
   // Here January is 1 based
   //Day 0 is the last day in the previous month
- return new Date(year, month, 0).getDate();
+ return new Date(year, month+1, 0).getDate();
 // Here January is 0 based
 // return new Date(year, month+1, 0).getDate();
 };
