--- a/aliasaf/index.html
+++ b/aliasaf/index.html
@@ -1,7 +1,7 @@
 
 <title></title>
 <div class="container">
-  <h1 id="head"><b> ALİ ASAF GÖNDOĞDU  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
+  <h1 id="head"><b> ALİ ASAF GÜNDOĞDU  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
   <ul>
   	<li><span id="years"></span><font color="#454545">Yil</font></li>
     <li><span id="months"></span><font color="#454545">Ay</font></li>
