--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<title></title>
+<title>Yusuf Gülle</title>
 <div class="container">
   <h1 id="head"><b> YUSUF GÜLLE  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
   <ul>
@@ -16,6 +16,7 @@
 
 
 
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 <script type = "text/JavaScript" src = "https://MomentJS.com/downloads/moment.js"></script>
 <script>
