--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 <script type = "text/JavaScript" src = "https://MomentJS.com/downloads/moment.js"></script>
 <script>
