--- a/ilk_yas.html
+++ b/ilk_yas.html
@@ -1,18 +1,19 @@
-Küçük oğlumuz birazdan 18 Haziran 17.00 itibarı ile ilk yaşına giricek. Doğumunu beklerken geçmeyen zaman bu 12 ay boyunca insafsızca anlamadığımız bir hızla geçiverdi.Bu zaman içinde çok fazla şey yaşadık, öğrendik. İyi varsın, iyiki doğdun oğlum diyorum. Aşağıdaki satırların sana hayat boyu rehberlik etmesini umuyorum:
-İyiki doğdun, hoşgeldin oğlum. Bundan sonra çevrende farkına vardığın herşey, herkes senin için bir ders olacak.
-- Sakın unutma, sana verilen en değerli meziyet unutmak olacak gereksiz şeyleri.
-- Hayatta hep bir hedefin ve farkında olduğun sorumlulukların olsun, olsun ki amacı kötü olan insanların aracı olmadan kendi iyi amaçların doğrultusunda yürüyebilesin.
-- Amacın asla para olmasın. Hayattaki en önemli seçimin bu olmalı ve bu seçimin paradan yana değil huzurdan yana, mutluluktan yana olmalı.
-- Her ne olursa olursa gülmeyi de ağlamayı da bileceksin. İnsan olduğunun göstergesidir bu ikisi. Asla utanma bu duygularını yaşarken.
-- Asla yalan söyleme ama söyleceklerini de söylemekten de asla sakınma. Senin toplumda piyon değil birey olduğunun en temel göstergesidir bu.
-- Unutma şimdi etrafında birsürü insan var ama ileride bunlar gittikçe azalacak. Yerlerine yenileri, değerlileri ve senin değerini bilenler alacak.
-- Artık yanağını sıkacak insan olmayacak yakınında. Ama ağladığında gözyaşlarını silecek ve seni ayakta tutabilecekler olur çevrende umarım. O yüzden
-seçeceğin kişileri iyi tanımalısın.
-- Aralarına geldiğin bu insanları, kendi isteğinle aralarında olacağın insanlara değişeceksin. Bunu incitmeden yap..
-- İnsanlara çok güvenme. En masumu bile yeri geldiğinde İNSAN gibi davranır. İnsanın en çirkin halini umarım görmezsin.
-- Asla içten pazarlık yapanlarla ve arkadan iş çevirenlerle aynı sofrada bulunma.
-- Başkalarının aldığı kararların askeri değil kendi kararlarının komutanı ol.
-- Adın gibi; Hz. Yusuf Perygamber gibi ol. Hiç acele etmene gerek yok şimdi bebekliğini yaşa.
-Bunları zaman içinde yaşayacaksın doya doya. İlk yaşın kutlu olsun oğlum. Hep iyilerle karşılaş. 
-								baki kalan bu kubbede bir hoş sada imiş
-Baban...
+<p>K&uuml;&ccedil;&uuml;k oğlumuz 18 Haziran 17.00 itibarı ile ilk yaşına girdi. Doğumunu beklerken ge&ccedil;meyen zaman bu 12 ay boyunca insafsızca anlamadığımız bir hızla ge&ccedil;iverdi.Bu zaman i&ccedil;inde &ccedil;ok fazla şey yaşadık, &ouml;ğrendik.</p>
+<p>İyi varsın, iyiki doğdun oğlum diyorum. Aşağıdaki satırların sana hayat boyu rehberlik etmesini umuyorum;</p>
+<p>İyiki doğdun, hoşgeldin oğlum. Bundan sonra &ccedil;evrende farkına vardığın herşey, herkes senin i&ccedil;in bir ders olacak.</p>
+<p>- Sakın unutma, sana verilen en değerli meziyet unutmak olacak gereksiz şeyleri.</p>
+<p>- Hayatta hep bir hedefin ve farkında olduğun sorumlulukların olsun, olsun ki amacı k&ouml;t&uuml; olan insanların aracı olmadan kendi iyi ama&ccedil;ların doğrultusunda y&uuml;r&uuml;yebilesin.</p>
+<p>- Amacın asla para olmasın. Hayattaki en &ouml;nemli se&ccedil;imin bu olmalı ve bu se&ccedil;imin paradan yana değil huzurdan yana, mutluluktan yana olmalı.</p>
+<p>- Her ne olursa olursa g&uuml;lmeyi de ağlamayı da bileceksin. İnsan olduğunun g&ouml;stergesidir bu ikisi. Asla utanma bu duygularını yaşarken.</p>
+<p>- Asla yalan s&ouml;yleme ama s&ouml;yleceklerini de s&ouml;ylemekten de asla sakınma. Senin toplumda piyon değil birey olduğunun en temel g&ouml;stergesidir bu.</p>
+<p>- Unutma şimdi etrafında birs&uuml;r&uuml; insan var ama ileride bunlar gittik&ccedil;e azalacak. Yerlerine yenileri, değerlileri ve senin değerini bilenler alacak.</p>
+<p>- Artık yanağını sıkacak insan olmayacak yakınında. Ama ağladığında g&ouml;zyaşlarını silecek ve seni ayakta tutabilecekler olur &ccedil;evrende umarım. O y&uuml;zden</p>
+<p>se&ccedil;eceğin kişileri iyi tanımalısın.</p>
+<p>- Aralarına geldiğin bu insanları, kendi isteğinle aralarında olacağın insanlara değişeceksin. Bunu incitmeden yap..</p>
+<p>- İnsanlara &ccedil;ok g&uuml;venme. En masumu bile yeri geldiğinde İNSAN gibi davranır. İnsanın en &ccedil;irkin halini umarım g&ouml;rmezsin.</p>
+<p>- Asla i&ccedil;ten pazarlık yapanlarla ve arkadan iş &ccedil;evirenlerle aynı sofrada bulunma.</p>
+<p>- Başkalarının aldığı kararların askeri değil kendi kararlarının komutanı ol.</p>
+<p>- Adın gibi; Hz. Yusuf Perygamber gibi ol. Hi&ccedil; acele etmene gerek yok şimdi bebekliğini yaşa.</p>
+<p>Bunları zaman i&ccedil;inde yaşayacaksın doya doya. İlk yaşın kutlu olsun oğlum. Hep iyilerle karşılaş.</p>
+<p style="text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; baki kalan bu kubbede bir hoş sada imiş</p>
+<p style="text-align: right;">Baban...</p>
