--- a/kayra/index.html
+++ b/kayra/index.html
@@ -1,7 +1,7 @@
 
-<title></title>
+<title>Yusuf Gülle</title>
 <div class="container">
-  <h1 id="head"><b> KAYRA GÜNDOĞDU  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
+  <h1 id="head"><b> YUSUF GÜLLE  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
   <ul>
   	<li><span id="years"></span><font color="#454545">Yil</font></li>
     <li><span id="months"></span><font color="#454545">Ay</font></li>
@@ -16,6 +16,7 @@
 
 
 
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 <script type = "text/JavaScript" src = "https://MomentJS.com/downloads/moment.js"></script>
 <script>
@@ -26,7 +27,7 @@
 	window.setInterval(function(){
   /// call your function here
   
-var dogum = moment('2021-05-06 14:51:00');
+var dogum = moment('2021-06-05 14:51:00');
 var simdi = moment();
 var diff = simdi.diff(dogum);
 
@@ -70,12 +71,12 @@ const second = 1000,
       hour = minute * 60,
       day = hour * 24;
       
-var birthDate = new Date('Mar 19, 2017 17:00:00');
+var birthDate = new Date('Mar 05, 2021 14:51:00');
 var nowDate = new Date();
 
 
  
-let countDown = new Date('Jun 19, 2019 17:00:00').getTime(),
+let countDown = new Date('Jun 05, 2021 14:51:00').getTime(),
 x = setInterval(function() {
 let now = new Date().getTime(),
 distance = now - countDown;
