--- a/zeynep/index.html
+++ b/zeynep/index.html
@@ -1,7 +1,7 @@
 
-<title>Zeynep Gülle</title>
+<title>Yusuf Gülle</title>
 <div class="container">
-  <h1 id="head"><b> ZEYNEP GÜLLE  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
+  <h1 id="head"><b> YUSUF GÜLLE  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
   <ul>
   	<li><span id="years"></span><font color="#454545">Yil</font></li>
     <li><span id="months"></span><font color="#454545">Ay</font></li>
@@ -27,7 +27,7 @@
 	window.setInterval(function(){
   /// call your function here
   
-var dogum = moment('2022-01-11 15:22:00');
+var dogum = moment('2022-01-11 17:00:00');
 var simdi = moment();
 var diff = simdi.diff(dogum);
 
@@ -71,12 +71,12 @@ const second = 1000,
       hour = minute * 60,
       day = hour * 24;
       
-var birthDate = new Date('Jan 11, 2022 15:22:00');
+var birthDate = new Date('Jan 11, 2017 17:00:00');
 var nowDate = new Date();
 
 
  
-let countDown = new Date('Jan 11, 2022 15:22:00').getTime(),
+let countDown = new Date('Jan 11, 2022 17:00:00').getTime(),
 x = setInterval(function() {
 let now = new Date().getTime(),
 distance = now - countDown;
