--- a/zeynep/index.html
+++ b/zeynep/index.html
@@ -1,7 +1,7 @@
 
 <title>Yusuf Gülle</title>
 <div class="container">
-  <h1 id="head"><b> YUSUF GÜLLE  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
+  <h1 id="head"><b> ZEYNEP  GÜLLE  </b><i><BR><font color="#656565" size="7">(Herşeyimiz)</font></i></h1>
   <ul>
   	<li><span id="years"></span><font color="#454545">Yil</font></li>
     <li><span id="months"></span><font color="#454545">Ay</font></li>
@@ -27,7 +27,7 @@
 	window.setInterval(function(){
   /// call your function here
   
-var dogum = moment('2024-01-11 15:22:00');
+var dogum = moment('2023-01-11 15:22:00');
 var simdi = moment();
 var diff = simdi.diff(dogum);
 
@@ -76,7 +76,7 @@ var nowDate = new Date();
 
 
  
-let countDown = new Date('Jan 11, 2023 17:00:00').getTime(),
+let countDown = new Date('Jan 11, 2023 15:22:00').getTime(),
 x = setInterval(function() {
 let now = new Date().getTime(),
 distance = now - countDown;
